--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ iframe {
     /* For desktop: */
     .col-1 {width: 8.33%;}
     .col-1-5 {width: 12.5%;}
+    .col-1-7 {width: 14.28%;}
     .col-2 {width: 16.66%;}
     .col-2-4 {width: 20%;}
     .col-3 {width: 25%;}
