--- a/styles.css
+++ b/styles.css
@@ -922,15 +922,16 @@ table {
     padding-bottom: 20px;
 }
 .collapsible {
-    background-color: #f1f1f1;
+    background-color: #f6f6f6;
     color: #000000;
     cursor: pointer;
     padding: 20px;
     width: 100%;
-    border: 1px solid #f1f1f1;
+    border: none;
     text-align: left;
     outline: none;
     font-size: 15px;
+    font-family: Lato;
 }
 .collapsible:after {
     content: '\002B';
@@ -943,10 +944,10 @@ table {
     content: "\2212";
 }
 .content {
-    padding: 0 20px;
+    padding: 8px 20px;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
     background-color: #ffffff;
-    border: 1px solid #f1f1f1;
+    border: none;
 }
